--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,13 @@ dependencies:
   go_router: ^17.1.0
   http: ^1.6.0
   provider: ^6.1.5+1
+  share_plus: ^12.0.1
   shared_preferences: ^2.5.4
-  
-
+  url_launcher: ^6.3.2
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
@@ -27,6 +27,7 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/logo.png"
   adaptive_icon_background: #ffffff
+    null
   adaptive_icon_foreground: "assets/logo.png"
 
 flutter:
